# 26-wuren-wangyile

./: README.md
Cmake_Test/: CMakeLists.txt  READ.MD
Cmake_Test/CMake 1/modules/M2/: CMakeLists.txt
demo01_ws/devel/: .catkin  _setup_util.py  local_setup.fish
demo01_ws/devel/lib/pkgconfig/: pack.pc  plumbing_pub_sub.pc  plumbing_test.pc
demo01_ws/devel/lib/plumbing_pub_sub/: demo01_pub_p.py
demo01_ws/devel/lib/plumbing_test/: turtle_controller
demo01_ws/devel/share/pack/cmake/: packConfig.cmake
demo01_ws/devel/share/plumbing_pub_sub/cmake/: plumbing_pub_subConfig.cmake
demo01_ws/devel/share/plumbing_test/cmake/: plumbing_testConfig.cmake
demo01_ws/src/plumbing_test/: CMakeLists.txt
demo01_ws/src/plumbing_test/config/: para.yaml
demo01_ws/src/plumbing_test/launch/: turtle_control.launch
demo01_ws/src/plumbing_test/scripts/: test01_pub_twist_p.py
demo01_ws/src/plumbing_test/src/: test01_sub_twist_c.cpp
作业/: .bashrc  scripts.sh
控制仿真作业/: bicycle_model.slx
